fix No Results screen on mobile

--- a/src/plugins/discover/public/application/_discover.scss
+++ b/src/plugins/discover/public/application/_discover.scss
@@ -37,6 +37,7 @@ discover-app {
   display: flex;
   overflow: hidden;
   @include euiBreakpoint('xs', 's') {
+    flex-grow: 0;
     flex-wrap: wrap;
     margin-left: 0;
     margin-right: 0;
@@ -223,7 +224,7 @@ discover-app {
     z-index: -1;
     min-height: $euiSizeM;
     min-width: $euiSizeM;
-    padding: $euiSizeXS * .5;
+    padding: $euiSizeXS * 0.5;
   }
 
   &.closed {
