--- a/src/plugins/discover/public/application/angular/directives/_no_results.scss
+++ b/src/plugins/discover/public/application/angular/directives/_no_results.scss
@@ -1,3 +1,6 @@
 .dscNoResults {
+  @include euiBreakpoint('xs', 's') {
+    padding: 0 $euiSizeS;
+  }
   max-width: 1000px;
 }
